Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -231,6 +231,22 @@
 												<h2>Summer Interns</h2>
 											</header>
 											<p>
+                                                Summer 2019 Interns:
+												<center>
+                                                <a href="#"> <img src="images/summer2019.jpg"
+                                                   alt="" style="width:400px;height:300px;border: #FFFFFF 4px solid"/></a>
+                                                <div>Ke Li, Milind Srivastava and Yash Jain</div>
+                                                </center>
+											</p>
+	<p>
+                                                Summer 2018 Interns:
+												<center>
+                                                <a href="#"> <img src="images/summer2018.jpg"
+                                                   alt="" style="width:400px;height:300px;border: #FFFFFF 4px solid"/></a>
+                                                <div>Rajarshi Saha and Junbo Zhang</div>
+                                                </center>
+											</p>
+											<p>
                                                 Summer 2017 Interns:
 												<center>
                                                 <a href="#"> <img src="images/Summer2017Interns.jpg"
