--- a/megamimo.html
+++ b/megamimo.html
@@ -12,6 +12,10 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<meta name="keywords" content="witech, witech lab, wireless, wireless networks, wireless technologies lab, swarun, swarun kumar, cmu, computer science" />
+		<meta name="description" content="Webpage of Swarun Kumar, Assistant Professor at ECE Dept., CMU" />
+		<link rel="shortcut icon" href="images/favicon.ico" />
+
 	</head>
 	<body>
 		<div id="page-wrapper">
