Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -163,7 +163,7 @@
  																								
      <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Haojian Jin</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Jason Hong</div></figcaption> </figure>
+																								    <figcaption>Haojian Jin</a><br><div style="margin-bottom:10px">Co-advised by Prof. Jason Hong</div></figcaption> </figure>
  		
 
 																								 <a href="https://akshaygadre.github.io/"> 	<figure>																								<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
@@ -176,22 +176,22 @@
 
      <a href="https://vaibhavsingh96.github.io/"> <figure> <img src="images/Vaibhav.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Vaibhav Singh</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Osman Ya&gbreve;an</div></figcaption> </figure>
+																								    <figcaption>Vaibhav Singh</a><br><div style="margin-bottom:10px">Co-advised by Prof. Osman Ya&gbreve;an</div></figcaption> </figure>
 
 
      <a href="http://www.andrew.cmu.edu/user/aprabhak/"> <figure> <img src="images/Akarsh.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Akarsh Prabhakara</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Anthony Rowe</div></figcaption> </figure>
+																								    <figcaption>Akarsh Prabhakara</a><br><div style="margin-bottom:10px">Co-advised by Prof. Anthony Rowe</div></figcaption> </figure>
 
 
      <a href="http://www.andrew.cmu.edu/user/junboz2/"> <figure> <img src="images/Junbo.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Junbo Zhang</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Soummya Kar</div></figcaption> </figure>
+																								    <figcaption>Junbo Zhang</a><br><div style="margin-bottom:10px">Co-advised by Prof. Soummya Kar</div></figcaption> </figure>
 
 
      <a href="https://atul-bansal.github.io/"> <figure> <img src="images/Atul.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Atul Bansal</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Bob Iannucci</div></figcaption> </figure>
+																								    <figcaption>Atul Bansal</a><br><div style="margin-bottom:10px">Co-advised by Prof. Bob Iannucci</div></figcaption> </figure>
 
 																								 </a>
 																							 </center>
