Swarun: Changed website

--- a/bfree.html
+++ b/bfree.html
@@ -184,7 +184,7 @@ This project aims to ask: Can we connect to battery-free devices over extremely 
 <ul style="margin-top: 10px"> 
 <li> <strong> PI: </strong> Swarun Kumar </li>
 <li> <strong> Students: </strong> 
-Jinxian Wang, Haojian Jin and Junbo Zhang</li>
+Jingxian Wang, Haojian Jin and Junbo Zhang</li>
 <li> <strong> Collaborators: </strong> Prof. Jason Hong, Prof. Carmel Majidi and Prof. Chris Harrison</li></ul>
 
 
