--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 												<!--<h3>A subheading about what we do</h3> -->
 											</header>
 											<ul class="check-list">
+<li> (1/20) Swarun receives the NSF <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1942902">CAREER</a> award </li>
 <li> (11/19) Check out Swarun's talk on future wireless at <a href="https://www.youtube.com/watch?v=xhCCFOPDpZs">TEDxPittsburgh</a> </li>
 <li> (11/19) <a href="rftattoo.html">RFTattoo</a> is accepted at UBICOMP 2020 </li>
 <li> (10/19) Our work on low-power WANs was accepted at <a href="chime.html">NSDI 2020</a> </li>
