Swarun: Changed website

--- a/publications.html
+++ b/publications.html
@@ -145,12 +145,14 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="mmfd.html">WEBSITE</a>]<br /></li>
 <li><strong>Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</strong>,  Akshay Gadre, Revathy Narayanan, Anh Luong, Swarun Kumar, Anthony Rowe and Bob Iannucci, NSDI 2020 [<a href="papers/chime-nsdi2020.pdf">PAPER</a>] [<a href="chime.html">WEBSITE</a>]<br /></li>
 <li><strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>] [<a href="rftattoo.html">WEBSITE</a>]<br /></li>
 <li><strong>Silver-Coated PDMS Beads for Soft, Stretchable, and Thermally Stable Conductive Elastomer Composites </strong>,  Chengfeng Pan, Yun Sik Ohm, Jingxian Wang, Michael J. Ford, Kitty Kumar, Swarun Kumar, and Carmel Majidi, ACS applied materials and interfaces  2019<br /></li>
 <li><strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>] [<a href="sozu.html">WEBSITE</a>]<br /></li>
 <li><strong>Perspective: eliminating channel feedback in next generation cellular networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, ACM SIGCOMM CCR  2019<br /></li>
 <li><strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>] [<a href="sdc.html">WEBSITE</a>]<br /></li>
+<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 <li><strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>] [<a href="pushid.html">WEBSITE</a>]<br /></li>
 <li><strong>Revisiting Software Defined Radios in the IoT Era </strong>, Revathy Narayanan, Swarun Kumar, HotNets  2018<br /></li>
 <li><strong>Poster: Maintaining UAV Stability using Low-Power WANs </strong>, Akshay Gadre, Revathy Narayanan, Swarun Kumar, MobiCom - Posters  2018<br /></li>
@@ -171,7 +173,6 @@ Our research interests are in the area of computer networks with a special focus
 <li><strong>CarSpeak: A Content-Centric Network for Autonomous Driving</strong>, Swarun Kumar, Lixin Shi, Stephanie Gil, Nabeel Ahmed, Dina Katabi, and Daniela Rus, ACM SIGCOMM  2012 [<a href="papers/carspeak-sigcomm2012.pdf">PAPER</a>] [<a href="slides/carspeak-sigcomm2012.pptx">SLIDES</a>] [<a href="carspeak.html">WEBSITE</a>]<br /></li>
 <li><strong>MegaMIMO: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi, ACM SIGCOMM  2012 <em>(CACM Research Highlight)</em> [<a href="papers/megamimo-sigcomm2012.pdf">PAPER</a>] [<a href="megamimo.html">WEBSITE</a>]<br /></li>
 <li><strong>A Cloud-Assisted Design for Autonomous Driving</strong>, Swarun Kumar, Shyamnath Gollakota, Dina Katabi, MCC Workshop (SIGCOMM)  2012<br /></li>
-<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 </ul>
 </div>
 
