--- a/mmfd.html
+++ b/mmfd.html
@@ -135,64 +135,34 @@
 							<div class="row">
 
 
-<div class="6u 12u(mobile)"> <section>
-<strong>Project: Towards Interference-Free Wireless LANs</h4> </strong><br /><br />
 
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project mmFD: Millimeter-Wave Full Duplex Radios</h4></strong><br />
 <table>
 <tr>
 <td>
-<div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/wifi.png" style="width:100%; height:350px;"/>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/mmfd.png" style="width:100%"/>
 </div>
 </td>
-</tr><tr>
+</tr>
+<tr>
 <td style="width:10px">
 <br />
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-This project aims to address one of the most challenging problems with existing Wi-Fi networks: wireless interference. Wireless spectrum is shared, which is why when a large number of users simultaneously access the medium, their individual communication speeds slows down accordingly. Our research explores new ways to reduce or even eliminate this interference. We develop both solutions to completely redesign wireless infrastructure or make simple software upgrades to existing Wi-Fi infrastructure. The WiTech lab's research has also explored new ways to sense the environment using existing commodity wireless LANs. </td>
+With wireless traffic demands slated to double every year, we explore Full Duplex as a way to use the existing mm-wave spectrum efficiently by transmitting and receiving simultaneously on the same frequency. In this project, we present the first bidirectional Full Duplex link at mm-wave frequencies by employing innovative techniques at the antenna, analog and digital domain to cancel the self interference leaking into the receiver chain.
+</td>
 </tr>
 </table>
-<br />
-</section><section>
-<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/swB1PkNTBQY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br /></section>
-</div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Publications</h4> </strong><br />
-<ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="mmfd.html">WEBSITE</a>]<br /></li>
-<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
-<li><strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013 [<a href="wiseek.html">WEBSITE</a>]<br /></li>
-<li><strong>Bringing Cross-Layer MIMO to Today's Wireless LANs</strong>, Swarun Kumar, Diego Cifuentes, Shyamnath Gollakota, and Dina Katabi, ACM SIGCOMM  2013 [<a href="papers/openrf-sigcomm2013.pdf">PAPER</a>] [<a href="slides/openrf-sigcomm2013.pptx">SLIDES</a>] [<a href="openrf.html">WEBSITE</a>]<br /></li>
-<li><strong>Interference Alignment by Motion</strong>, Fadel Adib (Co-primary), Swarun Kumar (Co-primary), Omid Aryan, Shyamnath Gollakota, and Dina Katabi, ACM MOBICOM  2013 [<a href="papers/momimo-mobicom2013.pdf">PAPER</a>] [<a href="slides/momimo-mobicom2013.pptx">SLIDES</a>] [<a href="momimo.html">WEBSITE</a>]<br /></li>
-<li><strong>CarSpeak: A Content-Centric Network for Autonomous Driving</strong>, Swarun Kumar, Lixin Shi, Stephanie Gil, Nabeel Ahmed, Dina Katabi, and Daniela Rus, ACM SIGCOMM  2012 [<a href="papers/carspeak-sigcomm2012.pdf">PAPER</a>] [<a href="slides/carspeak-sigcomm2012.pptx">SLIDES</a>] [<a href="carspeak.html">WEBSITE</a>]<br /></li>
-<li><strong>MegaMIMO: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi, ACM SIGCOMM  2012 <em>(CACM Research Highlight)</em> [<a href="papers/megamimo-sigcomm2012.pdf">PAPER</a>] [<a href="megamimo.html">WEBSITE</a>]<br /></li>
-</ul>
-
 </section>
 </div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Project Participants</h4> </strong><br />
-
-
-<ul style="margin-top: 10px"> 
-<li> <strong> PI: </strong> Swarun Kumar </li>
-<li> <strong> Students: </strong> 
-Diana Zhang and Jingxian Wang</li>
-<li> <strong> Collaborators: </strong> Prof. Dina Katabi</li></ul>
-
-
-</div>
-
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020<br />
+</li>
+</ul></div>										</section>
 
 								</div>
 							</div>
@@ -283,3 +253,4 @@ Diana Zhang and Jingxian Wang</li>
 
 	</body>
 </html>
+
