--- a/sensing.html
+++ b/sensing.html
@@ -157,7 +157,7 @@ This project aims to re-use existing wireless communication radios as <i>sensors
 <br />
 </section><section>
 <strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/dd-OlHwBDbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br /> <br /></section>
 </div>
 <div class="6u 12u(mobile)">
@@ -166,10 +166,10 @@ This project aims to re-use existing wireless communication radios as <i>sensors
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
 <li><strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>] [<a href="sdc.html">WEBSITE</a>]<br /></li>
+<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 <li><strong>Decimeter-Level Localization with a Single WiFi </strong>, Access Point, Deepak Vasisht, Swarun Kumar and Dina Katabi, NSDI  2016<br /></li>
 <li><strong>Accurate Indoor Localization with Zero Startup Cost</strong>, Swarun Kumar, Stephanie Gil, Dina Katabi and Daniela Rus, ACM MOBICOM  2014 <em>(Best Presentation Runner-up)</em> [<a href="papers/ubicarse-mobicom2014.pdf">PAPER</a>] [<a href="ubicarse.html">WEBSITE</a>]<br /></li>
 <li><strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>] [<a href="lteye.html">WEBSITE</a>]<br /></li>
-<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 </ul>
 
 </section>
