--- a/xg.html
+++ b/xg.html
@@ -162,6 +162,7 @@ This project aims to devise next-generation wireless networks that achieve faste
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="mmfd.html">WEBSITE</a>]<br /></li>
 <li><strong>Perspective: eliminating channel feedback in next generation cellular networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, ACM SIGCOMM CCR  2019<br /></li>
 <li><strong>Eliminating Channel Feedback in Next-Generation Cellular Networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, SIGCOMM  2016 <em>(Best Paper Award, GetMobile Research Highlight)</em><br /></li>
 <li><strong>piStream: Physical Layer Informed Adaptive Video Streaming Over LTE</strong>, Xiufeng Xie, Xinyu Zhang, Swarun Kumar, and Li Erran Li, MobiCom  2015 <em>(ACM GetMobile Research Hightlight)</em><br /></li>
