--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<meta name="keywords" content="witech, witech lab, wireless, wireless networks, wireless technologies lab, swarun, swarun kumar, cmu, computer science" />
-		<meta name="description" content="Webpage of Swarun Kumar, Assistant Professor at ECE Dept., CMU" />
+		<meta name="description" content="Webpage of the emerging Wireless Technologies (WiTech) lab led by Prof. Swarun Kumar, Assistant Professor at ECE Dept., CMU" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
 
 	</head>
