Swarun: Changed website

--- a/security.html
+++ b/security.html
@@ -162,6 +162,7 @@ This project aims to study the security and privacy challenges associated with n
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
 <li><strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018 [<a href="papers/dliot-icc2018.pdf">PAPER</a>] [<a href="dliot.html">WEBSITE</a>]<br /></li>
 <li><strong>Guaranteeing Spoof-Resilient Multi-Robot Networks</strong>, Stephanie Gil (Co-primary), Swarun Kumar (Co-primary), Mark Mazumder, Dina Katabi and Daniela Rus, RSS  2015<br /></li>
 </ul>
