--- a/nofacecontact.html
+++ b/nofacecontact.html
@@ -135,66 +135,35 @@
 							<div class="row">
 
 
-<div class="6u 12u(mobile)"> <section>
-<strong>Project: Towards Battery-Free Wireless Communication and Sensing</h4> </strong><br /><br />
 
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project NoFaceContact:  Stop Touching Your Face with NFC</h4></strong><br />
 <table>
 <tr>
 <td>
-<div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/bfree.png" style="width:100%; height:350px;"/>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/nofacecontact.png" style="width:100%"/>
 </div>
 </td>
-</tr><tr>
+</tr>
+<tr>
 <td style="width:10px">
 <br />
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-This project aims to ask: Can we connect to battery-free devices over extremely long distances? We develop the state-of-the-art longest range connectivity solution for completely battery-free commercial RFID tags, by exploiting collaboration between many distributed RFID readers. We explore several opportunities that such a system can produce. Imagine being able to track the location of every object around you over extended distances, by simply attaching a battery-free sticker. The WiTech lab's research has developed solutions for smart infrastructure monitoring, gesture-based interfaces and on-body sensing using battery-free networks. </td>
+ COVID-19, starting its pandemic in late 2019, has infected over 3 million people worldwide and significantly impacted people's daily life. Apart from respiratory droplet spreading, COVID-19 is also known to propagate when individuals touch a contaminated surface and then their own face. In this work, we propose a system design, NoFaceContact, which leverages Near-field Communication (NFC) technology to promptly warn users not to touch their face in hope to stifle the propagation of COVID-19 and possibly other viruses and bacteria that spread in a similar way.
+ 
+</td>
 </tr>
 </table>
-<br />
-</section><section>
-<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/1Z1DbU8kDak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br /></section>
-</div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Publications</h4> </strong><br />
-<ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
-<li><strong>Demo: Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /></li>
-<li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
-<li><strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>] [<a href="rftattoo.html">WEBSITE</a>]<br /></li>
-<li><strong>Silver-Coated PDMS Beads for Soft, Stretchable, and Thermally Stable Conductive Elastomer Composites </strong>,  Chengfeng Pan, Yun Sik Ohm, Jingxian Wang, Michael J. Ford, Kitty Kumar, Swarun Kumar, and Carmel Majidi, ACS applied materials and interfaces  2019<br /></li>
-<li><strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>] [<a href="sozu.html">WEBSITE</a>]<br /></li>
-<li><strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>] [<a href="pushid.html">WEBSITE</a>]<br /></li>
-<li><strong>WiSh: Towards a Wireless Shape-aware World </strong>, Haojian Jin, Jingxian Wang, Zhijian Yang, Swarun Kumar, Jason Hong, MobiSys  2018 [<a href="papers/wish-mobisys2018.pdf">PAPER</a>] [<a href="wish.html">WEBSITE</a>]<br /></li>
-<li><strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 <em>(Best Demo Honorable Mention)</em> [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>] [<a href="rfwear.html">WEBSITE</a>]<br /></li>
-</ul>
-
 </section>
 </div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Project Participants</h4> </strong><br />
-
-
-<ul style="margin-top: 10px"> 
-<li> <strong> PI: </strong> Swarun Kumar </li>
-<li> <strong> Students: </strong> 
-Jingxian Wang, Haojian Jin and Junbo Zhang</li>
-<li> <strong> Collaborators: </strong> Prof. Jason Hong, Prof. Carmel Majidi and Prof. Chris Harrison</li></ul>
-
-
-</div>
-
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020<br />
+</li>
+</ul></div>										</section>
 
 								</div>
 							</div>
@@ -285,3 +254,4 @@ Jingxian Wang, Haojian Jin and Junbo Zhang</li>
 
 	</body>
 </html>
+
