Swarun: Changed website

--- a/charm.html
+++ b/charm.html
@@ -160,9 +160,8 @@ A key insight in achieving better connectivity for LP-WAN clients is the base st
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Charm: Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </strong>, Adwait Dongare, Revathy Narayanan, Akshay Gadre, Artur Balanuta, Anh Luong, Swarun Kumar, Bob Iannucci, Anthony Rowe, IPSN  2018 <em>(Best Paper Award)</em> [<a href="papers/charm-ipsn2018.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Charm: Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </strong>, Adwait Dongare, Revathy Narayanan, Akshay Gadre, Artur Balanuta, Anh Luong, Swarun Kumar, Bob Iannucci, Anthony Rowe, IPSN  2018 <em>(Best Paper Award)</em> [<a href="papers/charm-ipsn2018.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
