--- a/choir.html
+++ b/choir.html
@@ -160,9 +160,8 @@ As Internet-of-things scales, we see LPWANs (Low-Power Wide Area Networks) emerg
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Empowering Low-Power Wide Area Networks in Urban Settings </strong>, Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM  2017 [<a href="papers/choir-sigcomm2017.pdf">PAPER</a>] [<a href="slides/choir-sigcomm2017.pdf">SLIDES</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Empowering Low-Power Wide Area Networks in Urban Settings </strong>, Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM  2017 [<a href="papers/choir-sigcomm2017.pdf">PAPER</a>] [<a href="slides/choir-sigcomm2017.pdf">SLIDES</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
