--- a/lteye.html
+++ b/lteye.html
@@ -160,9 +160,8 @@ LTE is a big part of our lives. Yet, its inner workings remain largely opaque to
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
