--- a/megamimo.html
+++ b/megamimo.html
@@ -160,9 +160,8 @@ Wireless spectrum is a limited and shared resource, which means that the more us
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>MegaMIMO: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi, ACM SIGCOMM  2012 <em>(CACM Research Highlight)</em> [<a href="papers/megamimo-sigcomm2012.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>MegaMIMO: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi, ACM SIGCOMM  2012 <em>(CACM Research Highlight)</em> [<a href="papers/megamimo-sigcomm2012.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
