--- a/nofacecontact.html
+++ b/nofacecontact.html
@@ -161,9 +161,8 @@
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
