--- a/carspeak.html
+++ b/carspeak.html
@@ -164,9 +164,8 @@
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>CarSpeak: A Content-Centric Network for Autonomous Driving</strong>, Swarun Kumar, Lixin Shi, Stephanie Gil, Nabeel Ahmed, Dina Katabi, and Daniela Rus, ACM SIGCOMM  2012 [<a href="papers/carspeak-sigcomm2012.pdf">PAPER</a>] [<a href="slides/carspeak-sigcomm2012.pptx">SLIDES</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>CarSpeak: A Content-Centric Network for Autonomous Driving</strong>, Swarun Kumar, Lixin Shi, Stephanie Gil, Nabeel Ahmed, Dina Katabi, and Daniela Rus, ACM SIGCOMM  2012 [<a href="papers/carspeak-sigcomm2012.pdf">PAPER</a>] [<a href="slides/carspeak-sigcomm2012.pptx">SLIDES</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
