--- a/chime.html
+++ b/chime.html
@@ -164,9 +164,8 @@ Frequency configuration for LP-WANs can lead to severe impact on their performan
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</strong>,  Akshay Gadre, Revathy Narayanan, Anh Luong, Swarun Kumar, Anthony Rowe and Bob Iannucci, NSDI 2020 [<a href="papers/chime-nsdi2020.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</strong>,  Akshay Gadre, Revathy Narayanan, Anh Luong, Swarun Kumar, Anthony Rowe and Bob Iannucci, NSDI 2020 [<a href="papers/chime-nsdi2020.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
