--- a/mmfd.html
+++ b/mmfd.html
@@ -160,9 +160,8 @@ With wireless traffic demands slated to double every year, we explore Full Duple
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
