--- a/momimo.html
+++ b/momimo.html
@@ -160,9 +160,8 @@ Traditional interference management leverages multiple antennas (MIMO) to steer 
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Interference Alignment by Motion</strong>, Fadel Adib (Co-primary), Swarun Kumar (Co-primary), Omid Aryan, Shyamnath Gollakota, and Dina Katabi, ACM MOBICOM  2013 [<a href="papers/momimo-mobicom2013.pdf">PAPER</a>] [<a href="slides/momimo-mobicom2013.pptx">SLIDES</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Interference Alignment by Motion</strong>, Fadel Adib (Co-primary), Swarun Kumar (Co-primary), Omid Aryan, Shyamnath Gollakota, and Dina Katabi, ACM MOBICOM  2013 [<a href="papers/momimo-mobicom2013.pdf">PAPER</a>] [<a href="slides/momimo-mobicom2013.pptx">SLIDES</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
