--- a/openrf.html
+++ b/openrf.html
@@ -164,9 +164,8 @@ Recent cross-layer MIMO systems have promised significant throughput gains. Yet,
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Bringing Cross-Layer MIMO to Today's Wireless LANs</strong>, Swarun Kumar, Diego Cifuentes, Shyamnath Gollakota, and Dina Katabi, ACM SIGCOMM  2013 [<a href="papers/openrf-sigcomm2013.pdf">PAPER</a>] [<a href="slides/openrf-sigcomm2013.pptx">SLIDES</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Bringing Cross-Layer MIMO to Today's Wireless LANs</strong>, Swarun Kumar, Diego Cifuentes, Shyamnath Gollakota, and Dina Katabi, ACM SIGCOMM  2013 [<a href="papers/openrf-sigcomm2013.pdf">PAPER</a>] [<a href="slides/openrf-sigcomm2013.pptx">SLIDES</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
