--- a/osprey.html
+++ b/osprey.html
@@ -136,7 +136,7 @@
 
 
 
-<div class="6u 12u(mobile)"> <section> <strong><h4>Project osprey:  A mmWave Approach to Tire Wear Sensing</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Osprey:  A mmWave Approach to Tire Wear Sensing</h4></strong><br />
 <table>
 <tr>
 <td>
@@ -160,9 +160,9 @@ Tire Wear affects safety and performance of automobiles. Osprey proposes a senso
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /><br />
+</li><li> <strong>Demo: Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
