--- a/sdc.html
+++ b/sdc.html
@@ -160,9 +160,8 @@ Despite widespread popularity, today's microwave ovens are limited in their cook
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
