--- a/sozu.html
+++ b/sozu.html
@@ -164,9 +164,8 @@ Sozu is a low-cost sensing system that can detect a wide range of events wireles
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
