--- a/ubicarse.html
+++ b/ubicarse.html
@@ -164,9 +164,8 @@ Despite extensive research over the past decade, indoor positioning has yet to g
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Accurate Indoor Localization with Zero Startup Cost</strong>, Swarun Kumar, Stephanie Gil, Dina Katabi and Daniela Rus, ACM MOBICOM  2014 <em>(Best Presentation Runner-up)</em> [<a href="papers/ubicarse-mobicom2014.pdf">PAPER</a>]<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Accurate Indoor Localization with Zero Startup Cost</strong>, Swarun Kumar, Stephanie Gil, Dina Katabi and Daniela Rus, ACM MOBICOM  2014 <em>(Best Presentation Runner-up)</em> [<a href="papers/ubicarse-mobicom2014.pdf">PAPER</a>]<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
