--- a/wiseek.html
+++ b/wiseek.html
@@ -164,9 +164,9 @@ Amazon and Google are piloting delivery drones to transport packages to customer
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013<br />
-</li>
-</ul></div>										</section>
+<li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013<br /><br />
+</li><li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus,  2015<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
