Swarun: Changed website

--- a/research.html
+++ b/research.html
@@ -165,7 +165,7 @@ last for years, or perhaps they must operate with no battery at
 all. Our research explores both these alternatives:<br /><br /> </div>
 
 <center>
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <center>
@@ -211,7 +211,7 @@ of today, as well as emerging technologies of the future such as
 mm-wave. Our work spans both Wi-Fi and cellular networks beyond 5-G. <br /> <br /></div>
 
 <center>
-<table>
+<table  style="width:100%">
 <tr>
 <td>
 <center>
@@ -258,7 +258,7 @@ implications of such future wireless networks and services.<br /><br />
  </div>
 
 <center>
-<table>
+<table  style="width:100%">
 <tr>
 <td>
 <center>
