--- a/charm.html
+++ b/charm.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project Charm:  Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
