--- a/lpwan.html
+++ b/lpwan.html
@@ -138,7 +138,7 @@
 <div class="6u 12u(mobile)"> <section>
 <strong>Project: Pushing the Limits of Low-Power Wide-Area Networks</h4> </strong><br /><br />
 
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
