--- a/nofacecontact.html
+++ b/nofacecontact.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project NoFaceContact:  Stop Touching Your Face with NFC</h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
