--- a/pushid.html
+++ b/pushid.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project PushID: Pushing the Range Limits of Commercial Passive RFIDs </h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
