--- a/rfwear.html
+++ b/rfwear.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project RFWear: Towards Wearable Everyday Body-Frame Tracking </h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
