--- a/sozu.html
+++ b/sozu.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project Sozu:  Self-Powered Radio Tags for Building-Scale Activity Sensing </h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
