--- a/ubicarse.html
+++ b/ubicarse.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project Ubicarse: Accurate Indoor Localization with Zero Startup Cost</h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
