--- a/wiseek.html
+++ b/wiseek.html
@@ -137,7 +137,7 @@
 
 
 <div class="6u 12u(mobile)"> <section> <strong><h4>Project WiSeek: Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</h4></strong><br />
-<table>
+<table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
