--- a/publications.html
+++ b/publications.html
@@ -147,7 +147,7 @@ Our research interests are in the area of computer networks with a special focus
 <ul style="list-style-type: disc">
 <li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>A Cloud-Optimized Link Layer for Low-Power Wide-Area Networks</strong>, Artur Balanuta, Nuno Pereira, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="opr.html">WEBSITE</a>]<br /></li>
-<li><strong>Demo: Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /></li>
+<li><strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
 <li><strong>Poster: Does Ambient RF Energy Suffice to Power Battery-free IoT?</strong>, Atul Bansal, Swarun Kumar and Bob Iannucci, MobiSys  2020 [<a href="wira.html">WEBSITE</a>]<br /></li>
 <li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
