--- a/bfree.html
+++ b/bfree.html
@@ -166,7 +166,7 @@ This project aims to ask: Can we connect to battery-free devices over extremely 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
 <li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
-<li><strong>Demo: Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /></li>
+<li><strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
 <li><strong>Poster: Does Ambient RF Energy Suffice to Power Battery-free IoT?</strong>, Atul Bansal, Swarun Kumar and Bob Iannucci, MobiSys  2020 [<a href="wira.html">WEBSITE</a>]<br /></li>
 <li><strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>] [<a href="rftattoo.html">WEBSITE</a>]<br /></li>
