--- a/osprey.html
+++ b/osprey.html
@@ -151,13 +151,17 @@
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-Tire Wear affects safety and performance of automobiles. Osprey proposes a sensor system design which continuously measures tire wear while overcoming challenges related to road debris affecting the measurements. Osprey is simply a mmWave RADAR placed in the tire well, running RADAR processing algorithms to estimate the tire wear.
+Tire wear affects safety and performance of automobiles. Past solutions are either inaccurate, requires sensors embedded in tires or are prone to road debris. Osprey proposes a sensor system design based on automotive mmWave radars and designs algorithms to measure tire wear while overcoming challenges related to road debris. In addition, the principles used also open up solutions for detecting and localizing harmful metallic foreign objects in the tire.
 </td>
 </tr>
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/jhasOfGaS5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /><br />
