Swarun: Changed website

--- a/nofacecontact.html
+++ b/nofacecontact.html
@@ -151,14 +151,18 @@
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
- COVID-19, starting its pandemic in late 2019, has infected over 3 million people worldwide and significantly impacted people's daily life. Apart from respiratory droplet spreading, COVID-19 is also known to propagate when individuals touch a contaminated surface and then their own face. In this work, we propose a system design, NoFaceContact, which leverages Near-field Communication (NFC) technology to promptly warn users not to touch their face in hope to stifle the propagation of COVID-19 and possibly other viruses and bacteria that spread in a similar way.
+ COVID-19, emerging in late 2019, has infected millions of people worldwide and significantly impacted daily life. Apart from respiratory droplet spreading, COVID-19 is also known to propagate when individuals touch a contaminated surface and then their own face. In this work, we propose a system design, NoFaceContact, which leverages Near-field Communication (NFC) technology to promptly warn users not to touch their face in hope to stifle the propagation of COVID-19 and possibly other viruses and bacteria that spread in a similar way.
  
 </td>
 </tr>
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/8NeQoRQgqjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020<br /><br />
