--- a/security.html
+++ b/security.html
@@ -155,7 +155,10 @@ This project aims to study the security and privacy challenges associated with n
 </tr>
 </table>
 <br />
-</section>
+</section><section>
+<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
+    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/8NeQoRQgqjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br /> <br /></section>
 </div>
 <div class="6u 12u(mobile)">
 <section>
