--- a/opr.html
+++ b/opr.html
@@ -160,7 +160,7 @@ As Low-Power Wide-Area Networking (LPWAN) deployments scale, they will increasin
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>A Cloud-Optimized Link Layer for Low-Power Wide-Area Networks</strong>, Artur Balanuta, Nuno Pereira, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /><br />
+<li> <strong>A Cloud-Optimized Link Layer for Low-Power Wide-Area Networks</strong>, Artur Balanuta, Nuno Pereira, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="papers/opr-mobisys2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
